lib/translator/test/fixtures/ok/raw/op-binary-arith.prg
PROGRAM binary_arith
BEGIN
    2 + 2
    -2 * 5.0 - 3
    false + ""
    3 / 5
    4 % 2
END
