lib/translator/test/fixtures/error/raw/binary-arith-datatypes.prg
PROGRAM wrong_binary_datatype
BEGIN
    2 + false
END
